--- a/_posts/2019-12-21-the-us-narrative-today.html
+++ b/_posts/2019-12-21-the-us-narrative-today.html
@@ -1643,107 +1643,107 @@ stories:
   domain: http://www.beebenews.com/
   link: https://beebenews.com/?p=34855
 images:
-- name: cannon-facing-cannon-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cannon-facing-cannon-dark-dali.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-blue-electricity.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-blue-electricity.png
-- name: trucksilo-trucksilo-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-sand-paper.jpg
-- name: containership-containership-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-bright-sand.jpg
-- name: old-cabin-oldcabin-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-alberto-giacometti.jpg
-- name: machine-road-machine-road-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-nazi-poster.jpg
-- name: status-berlin-status-berlin-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-ww2-dresden.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-atari-asteroids.jpg
-- name: containership-containership-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-matrix.jpg
-- name: stories-methuselah-mountain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-methuselah-mountain.jpg
-- name: nazi-invasion-san-francisco-from-salesforce-west.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-san-francisco-from-salesforce-west.jpg
-- name: copper-circuit-nyc-coming-in-on-train.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-nyc-coming-in-on-train.jpg
-- name: machine-road-machine-road-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-ww2-dresden.jpg
-- name: old-house-oldhouse-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-space-pizza.jpg
-- name: bordercrossing-bordercrossing-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-colorful-dream.jpg
-- name: dragon_close-up-wave.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon_close-up-wave.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-yellow-collage.jpg
-- name: stories-castle-on-hill-edinburgh-propaganda-leaflets.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-castle-on-hill-edinburgh-propaganda-leaflets.JPG
-- name: stories-server-racks-clouds-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-server-racks-clouds-copper-circuit.jpg
-- name: yosemite-yosemite-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-smoking-cigarette.jpg
-- name: beach-rocks-beach-rocks-currents-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-really-hot.jpg
-- name: cargo-ship-cargo-ship-on-sea-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-rainbow-festival.jpg
-- name: scream-DSC_0089.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/scream-DSC_0089.jpg
-- name: stories-new-27-93-800-500-0-max-0--1--1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-27-93-800-500-0-max-0--1--1.jpg
-- name: school-clouds-church-clouds-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-dali-two.jpg
-- name: copper-circuit-destruction-seattle-viaduct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-destruction-seattle-viaduct.jpg
-- name: power-lines-power-lines-empty-space-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-purple-storm.jpg
-- name: gypsymosaic-gypsy-eyes-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-blue-circuit.jpg
-- name: oldcabin-store-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-colorful-blocks.jpg
-- name: white-house-lawn-white-house-window-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-spagetti-accident.jpg
-- name: stories-new-54-32-800-500-0-max-0--5--1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-54-32-800-500-0-max-0--5--1.jpg
-- name: aws-s3-stories-white-man-burning-down.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-white-man-burning-down.jpg
-- name: adam-smith-adam-smith-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-blue-circuit.jpg
-- name: mistywoods-babyfoot-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-plentiful.jpg
-- name: berlinwall-DSC-0084-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-ww2-color.jpg
-- name: oldtrain-oldtrain-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-really-hot.jpg
-- name: nazi-invasion-wwdc-2011---moscone---san-francisco_5809419816_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-wwdc-2011---moscone---san-francisco_5809419816_o.jpg
-- name: la-muse-old-broken-piano-street.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-old-broken-piano-street.jpg
-- name: fence-mexico-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-colorful-dream.jpg
-- name: abe-lincoln-one-ww2-color-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-ww2-color-file-00-00-00-00.jpg
-- name: nazi-invasion-train-france-high-speed-in-station.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-train-france-high-speed-in-station.jpg
-- name: status-berlin-status-berlin-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-dark-rain.jpg
-- name: border-crossing-bordercrossing-pablo-blue.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-pablo-blue.png
-- name: beach-clouds-lifeguard-beachclouds-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-plentiful.jpg
-- name: hollywood-building-hollywood-building-blue-circuit-4.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-blue-circuit-4.jpg
-- name: blossombar-oily-mcoilface-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-oily-mcoilface-file-00-00-00-00.jpg
-- name: gypsy-wagon-gypsywagon-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-post-modern.jpg
-- name: old-church-oldchurch-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-yellow-collage.jpg
-- name: hollywood-building-hollywood-building-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-kandinsky-bv.jpg
-- name: crow-crow-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-gan-vogh.jpg
-- name: stories-cargo-ship-on-sea-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-cargo-ship-on-sea-copper-circuit.jpg
+- name: blossombar-deep-connections-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-deep-connections-file-00-00-00-00.jpg
+- name: dc-statue-dcstatue-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-purple-pond.jpg
+- name: stories-lincoln-consitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-lincoln-consitution.jpg
+- name: copper-circuit-IMG_7169.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-IMG_7169.jpg
+- name: razorcliff-razorcliff-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-diego-rivera1.jpg
+- name: wind-mills-windmills-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-kandinsky-bv.jpg
+- name: ellis-island-ellisisland-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-yellow-collage.jpg
+- name: razorwire-DSC-0080-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-atari-missle.jpg
+- name: gypsymosaic-gypsy-eyes-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-pablo-blue.jpg
+- name: old-granary-field-oldhouse-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-constitution.jpg
+- name: la-muse-dragon-turning-head.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-dragon-turning-head.jpg
+- name: old-church-oldchurch-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-post-modern.jpg
+- name: bf-skinner-hiding-monster-statue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-hiding-monster-statue.jpg
+- name: docks-docks-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-dali-two.jpg
+- name: copper-circuit-DSC_0088.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-DSC_0088.jpg
+- name: containership-containership-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-creativity.jpg
+- name: ellis-island-ellis-island-room-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-yellow-paper.jpg
+- name: lincoln-memorial-lincolnmemorial-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-mucha-mult.jpg
+- name: bordercrossing-bordercrossing-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-alien-goggles.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-bright-sand.jpg
+- name: store-on-corner-store-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-dark-dali.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh.JPG
+- name: school-clouds-church-clouds-jap-wav-pr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-jap-wav-pr.jpg
+- name: old-school-house-old-schoolhouse-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-creativity.jpg
+- name: nazi-invasion-IMG_7054.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-IMG_7054.jpg
+- name: stalin-time-working-on-railroad-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-working-on-railroad-2.jpg
+- name: birdhouse-birdhouse-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-far-away.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-really-hot.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-really-hot.JPG
+- name: fast-lights-freeway-redes-fast-flux-623x425-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-really-hot.jpg
+- name: aws-s3-stories-amusement-park-2-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-amusement-park-2-light-dali.jpg
+- name: sand-hand-sand-hand-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-atari-asteroids.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-hot-spicy.jpg
+- name: nazi-invasion-seattle-public-market_36725946605_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-seattle-public-market_36725946605_o.jpg
+- name: machine-road-machine-road-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-satan-red.jpg
+- name: abe-lincoln-one-purp-paper-file-00-00-07-91.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-purp-paper-file-00-00-07-91.jpg
+- name: bf-skinner-border-crossing-through-fence.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-border-crossing-through-fence.jpg
+- name: bluelake-blue-brush-file-00-01-17-38.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-blue-brush-file-00-01-17-38.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-wols.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-yellow-collage.jpg
+- name: old-house-oldhouse-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-dark-rain.jpg
+- name: aws-s3-stories-server-cloud1-feed-people.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-server-cloud1-feed-people.jpg
+- name: paris-paris-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-spagetti-accident.jpg
+- name: gypsy-wagon-gypsywagon-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-satan-red.jpg
+- name: status-berlin-status-berlin-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-dry-skin.jpg
+- name: dragon_close-up-wreck.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon_close-up-wreck.jpg
+- name: crow-crow-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-blue-electricity.jpg
+- name: subway-subway-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-purp-paper.jpg
+- name: server-cloud-server-racks-door-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-alberto-giacometti.jpg
+- name: schoolhouse-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/schoolhouse-dark-dali.jpg
+- name: nazi-invasion-capital-records-building.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-capital-records-building.jpg
+- name: bluelake-deep-connections-file-00-00-38-67.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-deep-connections-file-00-00-38-67.jpg
 ---
 Expert Event Planner Deb Miller.&nbsp;Signs Of Trouble With Federal Surveillance Program.&nbsp;Mayor, Cemetery At Odds In Search For Tulsa Massacre Victims.&nbsp;Here's How To Wrap Oddly Shaped Holiday Gifts.&nbsp;Van Orsdel Holding Third Blue Christmas Service.&nbsp;Humbug! Where Does That Word Come From Anyway?.&nbsp;Former Kentucky Governor Defends Controversial Pardons.&nbsp;Wildcats Make Their Choices On National Signing Day.&nbsp;
